syntax = "proto3";
package verifier_grpc;

message StoreRequest {
    string name = 1;
    bytes content = 2;
}

message StoreResponse { }

message RetrieveRequest {
    string name = 1;
}

message RetrieveResponse {
    string name = 1;
    bytes content = 2;
}

service VerifierGrpc {
    rpc Store(StoreRequest) returns (StoreResponse);
    rpc Retrieve(RetrieveRequest) returns (RetrieveResponse);
}
